LUN-1655: Move help text on the left to avoid tooltip beeing cut off when window is too small

--- a/cms_blogger/static/cms_blogger/css/blogger.css
+++ b/cms_blogger/static/cms_blogger/css/blogger.css
@@ -56,7 +56,7 @@
 .cms-blogger .blog-header #blog-banding-image {
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   max-height: 100%;
 }
 @media (max-width: 481px) {
